--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>service</li>
+            <li>Home</li>
+        </ul>
+    </nav>
     <h1>hello world</h1>
 
-    
+
 </body>
 </html>
